formatação do readme e mudanças em alguma interpretações

--- a/01_Dicionario_Dados.ipynb
+++ b/01_Dicionario_Dados.ipynb
@@ -1,24 +1,22 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 10,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Dicionário de Dados - Componentes de Computador\n",
         "\n",
         "## Descrição Geral\n",
-        "### Este dataset contém informações sobre componentes de computador, incluindo CPUs, GPUs, memórias RAM, placas-mãe, fontes de alimentação, SSDs e HDDs. Os dados foram coletados para análise de mercado e características técnicas dos componentes.\n",
+        "Este dataset contém informações sobre componentes de computador, incluindo CPUs, GPUs, memórias RAM, placas-mãe, fontes de alimentação, SSDs e HDDs. Os dados foram coletados para análise de mercado e características técnicas dos componentes.\n",
         "\n",
         "## Objetivo\n",
-        "### Documentar e descrever todos os atributos presentes nos datasets, incluindo tipos de dados, formatos e descrições detalhadas. \n",
-        "### O objetivo é criar um dicionário de dados que possa ser utilizado para a análise dos dados."
+        "- Documentar e descrever todos os atributos presentes nos datasets, incluindo tipos de dados, formatos e descrições detalhadas. \n",
+        "- O objetivo é criar um dicionário de dados que possa ser utilizado para a análise dos dados."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -81,10 +79,8 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 13,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
         "## 1. Visão Geral dos Datasets\n"
       ]
@@ -209,7 +205,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -434,7 +430,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -589,7 +585,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -691,7 +687,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
