--- a/05_Relatorio_Final.ipynb
+++ b/05_Relatorio_Final.ipynb
@@ -1,40 +1,36 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": 10,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Relatório Final - Análise de Dados de Componentes de Computador\n",
         "\n",
         "## Resumo Executivo\n",
         "\n",
-        "### Este relatório apresenta uma análise completa de dados sobre componentes de computador, incluindo CPUs, GPUs, memórias RAM, placas-mãe, fontes de alimentação, SSDs e HDDs. O objetivo foi realizar uma análise de ciência de dados abrangente, desde a documentação dos dados até a modelagem preditiva.\n",
+        "Este relatório apresenta uma análise completa de dados sobre componentes de computador, incluindo CPUs, GPUs, memórias RAM, placas-mãe, fontes de alimentação, SSDs e HDDs. O objetivo foi realizar uma análise de ciência de dados abrangente, desde a documentação dos dados até a modelagem preditiva.\n",
         "\n",
         "### Principais Resultados:\n",
-        "### - **Datasets analisados**: 7 tipos de componentes com mais de 70.000 registros totais\n",
-        "### - **Qualidade dos dados**: Identificação e tratamento de dados ausentes e inconsistências\n",
-        "### - **Insights descobertos**: Padrões de mercado e relações entre características técnicas\n",
-        "### - **Modelos desenvolvidos**: 4 modelos preditivos com performance satisfatória\n",
+        "- **Datasets analisados**: 7 tipos de componentes com mais de 70.000 registros totais\n",
+        "- **Qualidade dos dados**: Identificação e tratamento de dados ausentes e inconsistências\n",
+        "- **Insights descobertos**: Padrões de mercado e relações entre características técnicas\n",
+        "- **Modelos desenvolvidos**: 4 modelos preditivos com performance satisfatória\n",
         "\n",
         "## Índice\n",
-        "### 1. [Introdução e Objetivos](#introducao)\n",
-        "### 2. [Metodologia](#metodologia)\n",
-        "### 3. [Descrição dos Dados](#dados)\n",
-        "### 4. [Análise de Qualidade](#qualidade)\n",
-        "### 5. [Análise Exploratória](#exploratoria)\n",
-        "### 6. [Modelagem Preditiva](#modelagem)\n",
-        "### 7. [Resultados e Discussão](#resultados)\n",
-        "### 8. [Conclusões e Recomendações](#conclusoes)\n",
-        "### 9. [Limitações e Trabalhos Futuros](#limitacoes)\n"
+        "1. [Introdução e Objetivos](#introducao)\n",
+        "2. [Metodologia](#metodologia)\n",
+        "3. [Descrição dos Dados](#dados)\n",
+        "4. [Análise de Qualidade](#qualidade)\n",
+        "5. [Análise Exploratória](#exploratoria)\n",
+        "6. [Modelagem Preditiva](#modelagem)\n",
+        "7. [Resultados e Discussão](#resultados)\n",
+        "8. [Conclusões e Recomendações](#conclusoes)\n",
+        "9. [Limitações e Trabalhos Futuros](#limitacoes)\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 11,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
       "source": [
         "# Relatório Final - Análise de Dados de Componentes de Computador\n",
         "\n",
@@ -42,34 +38,34 @@
         "\n",
         "### 1.1 Contexto do Projeto\n",
         "\n",
-        "###     O mercado de componentes de computador é altamente dinâmico e técnico, com milhares de produtos disponíveis e características complexas que influenciam performance, consumo energético e compatibilidade. Este projeto foi desenvolvido para aplicar técnicas de ciência de dados na análise deste mercado, proporcionando insights valiosos para consumidores, fabricantes e pesquisadores.\n",
+        "O mercado de componentes de computador é altamente dinâmico e técnico, com milhares de produtos disponíveis e características complexas que influenciam performance, consumo energético e compatibilidade. Este projeto foi desenvolvido para aplicar técnicas de ciência de dados na análise deste mercado, proporcionando insights valiosos para consumidores, fabricantes e pesquisadores.\n",
         "\n",
         "### 1.2 Objetivos Principais\n",
         "\n",
         "#### Objetivos Gerais:\n",
-        "### - Realizar análise completa de dados de componentes de computador\n",
-        "### - Aplicar metodologias de ciência de dados de forma rigorosa\n",
-        "### - Desenvolver modelos preditivos para problemas reais do mercado\n",
-        "### - Gerar insights acionáveis sobre padrões e tendências\n",
+        "- Realizar análise completa de dados de componentes de computador\n",
+        "- Aplicar metodologias de ciência de dados de forma rigorosa\n",
+        "- Desenvolver modelos preditivos para problemas reais do mercado\n",
+        "- Gerar insights acionáveis sobre padrões e tendências\n",
         "\n",
         "#### Objetivos Específicos:\n",
-        "### 1. **Documentação**: Criar dicionário completo de dados\n",
-        "### 2. **Qualidade**: Identificar e tratar problemas nos dados\n",
-        "### 3. **Exploração**: Descobrir padrões e relações entre variáveis\n",
-        "### 4. **Modelagem**: Desenvolver modelos preditivos eficazes\n",
-        "### 5. **Insights**: Extrair conhecimento aplicável ao mercado\n",
+        "1. **Documentação**: Criar dicionário completo de dados\n",
+        "2. **Qualidade**: Identificar e tratar problemas nos dados\n",
+        "3. **Exploração**: Descobrir padrões e relações entre variáveis\n",
+        "4. **Modelagem**: Desenvolver modelos preditivos eficazes\n",
+        "5. **Insights**: Extrair conhecimento aplicável ao mercado\n",
         "\n",
         "### 1.3 Relevância do Estudo\n",
         "\n",
-        "### Este estudo é relevante para:\n",
-        "### - **Consumidores**: Tomada de decisão informada na compra de componentes\n",
-        "### - **Fabricantes**: Análise de mercado e desenvolvimento de produtos\n",
-        "### - **Pesquisadores**: Base de dados para estudos acadêmicos\n",
-        "### - **Desenvolvedores**: Otimização de sistemas e aplicações\n"
+        "Este estudo é relevante para:\n",
+        "- **Consumidores**: Tomada de decisão informada na compra de componentes\n",
+        "- **Fabricantes**: Análise de mercado e desenvolvimento de produtos\n",
+        "- **Pesquisadores**: Base de dados para estudos acadêmicos\n",
+        "- **Desenvolvedores**: Otimização de sistemas e aplicações\n"
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -106,7 +102,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
@@ -185,7 +181,7 @@
       ]
     },
     {
-      "cell_type": "raw",
+      "cell_type": "markdown",
       "metadata": {
         "vscode": {
           "languageId": "raw"
